# Tip_Calculater

./: README.md  pyproject.toml
Resorces/: Styles.qss
tip_calculater/: Controller.py  app.py
